chimera_red/firmware/build_output.txt
Processing esp32-s3-devkitc-1 (platform: espressif32; board: esp32-s3-devkitc-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.12.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.40900.250804 (4.9.0) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 37 compatible libraries
Scanning dependencies...
Dependency Graph
|-- SmartRC-CC1101-Driver-Lib @ 2.5.7
|-- TFT_eSPI @ 2.5.43
|-- Adafruit PN532 @ 1.3.4
|-- ESP32 BLE Arduino @ 2.0.0
|-- SPI @ 2.0.0
|-- WiFi @ 2.0.0
Building in release mode
Compiling .pio\build\esp32-s3-devkitc-1\src\main.cpp.o
In file included from src/main.cpp:11:
.pio/libdeps/esp32-s3-devkitc-1/TFT_eSPI/TFT_eSPI.h:973:8: warning: #warning >>>>------>> TOUCH_CS pin not defined, TFT_eSPI touch functions will not be available! [-Wcpp]
       #warning >>>>------>> TOUCH_CS pin not defined, TFT_eSPI touch functions will not be available!
        ^~~~~~~
src/main.cpp: In function 'bool setRadioMode(RadioMode)':
src/main.cpp:64:5: error: 'esp_wifi_set_promiscuous' was not declared in this scope
     esp_wifi_set_promiscuous(false);
     ^~~~~~~~~~~~~~~~~~~~~~~~
src/main.cpp:64:5: note: suggested alternative: 'esp_wifi_bt_power_domain_off'
     esp_wifi_set_promiscuous(false);
     ^~~~~~~~~~~~~~~~~~~~~~~~
     esp_wifi_bt_power_domain_off
src/main.cpp:65:5: error: 'esp_wifi_set_promiscuous_rx_cb' was not declared in this scope
     esp_wifi_set_promiscuous_rx_cb(NULL);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/main.cpp:65:5: note: suggested alternative: 'wifi_promiscuous_pkt_t'
     esp_wifi_set_promiscuous_rx_cb(NULL);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     wifi_promiscuous_pkt_t
src/main.cpp:89:5: error: 'esp_wifi_set_promiscuous' was not declared in this scope
     esp_wifi_set_promiscuous(true);
     ^~~~~~~~~~~~~~~~~~~~~~~~
src/main.cpp:89:5: note: suggested alternative: 'esp_wifi_bt_power_domain_off'
     esp_wifi_set_promiscuous(true);
     ^~~~~~~~~~~~~~~~~~~~~~~~
     esp_wifi_bt_power_domain_off
Compiling .pio\build\esp32-s3-devkitc-1\libf59\BLE\BLECharacteristicMap.cpp.o
*** [.pio\build\esp32-s3-devkitc-1\src\main.cpp.o] Error 1
========================== [FAILED] Took 5.31 seconds ==========================

Processing native (platform: native)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 1 compatible libraries
Scanning dependencies...
No dependencies
Building in release mode
Compiling .pio\build\native\src\main.o
'g++' is not recognized as an internal or external command,
operable program or batch file.
*** [.pio\build\native\src\main.o] Error 1
========================== [FAILED] Took 0.63 seconds ==========================

Environment         Status    Duration
------------------  --------  ------------
esp32-s3-devkitc-1  FAILED    00:00:05.308
native              FAILED    00:00:00.627
==================== 2 failed, 0 succeeded in 00:00:05.935 ====================
